--- a/src/app/login/tela-login/tela-login.component.html
+++ b/src/app/login/tela-login/tela-login.component.html
@@ -1,3 +1,9 @@
-<p>
-  tela-login works!
-</p>
+<div>
+
+    <input type='text' [(ngModel)]='user'>
+    <input type='password' [(ngModel)]='password'>
+
+    <button (click)='entrar()'>Entrar</button>
+    <button (click)='logout()'>Logout</button>
+
+</div>
