--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  main-page works!
-</p>
+<div>
+
+  <button (click)='cliente()'>Cliente</button>
+  <button (click)='pedidos()'>Pedidos</button>
+  <button (click)='produtos()'>Produtos</button>
+
+</div>
