--- a/src/app/login/tela-login/tela-login.component.html
+++ b/src/app/login/tela-login/tela-login.component.html
@@ -3,7 +3,7 @@
     <input placeholder="Usuário" type='text' [(ngModel)]='user'>
     <input placeholder="Senha" type='password' [(ngModel)]='password'>
 
-    <button id="botao-entrar" (click)='entrar()'>Entrar</button>
+    <button (click)='entrar()'>Entrar</button>
     <button (click)='logout()'>Logout</button>
 
 </div>
