--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -1,7 +1,7 @@
-<div>
+<div style="display: flex; justify-content: center;">
 
-  <button (click)='cliente()'>Cliente</button>
-  <button (click)='pedidos()'>Pedidos</button>
+  <button style="margin-right: 10px;" (click)='cliente()'>Cliente</button>
+  <button style="margin-right: 10px;" (click)='pedidos()'>Pedidos</button>
   <button (click)='produtos()'>Produtos</button>
 
 </div>
