--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -2,6 +2,7 @@
 
   <button style="margin-right: 10px;" (click)='cliente()'>Cliente</button>
   <button style="margin-right: 10px;" (click)='pedidos()'>Pedidos</button>
-  <button (click)='produtos()'>Produtos</button>
+  <button style="margin-right: 10px;" (click)='produtos()'>Produtos</button>
+  <button (click)='voltar()'>Voltar</button>
 
 </div>
