--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.css
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.css
@@ -12,13 +12,13 @@
 }
 
 .cadastrar{
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
 }
 
 .cadastro{
-    width: 10%;
-    height: 25px;
-    border-radius: 15px;
+    width: 100%;
+    height: 30px;
+    border: 1px solid black;
 }
