--- a/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
+++ b/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
@@ -14,5 +14,9 @@
     <button (click) = 'cadastrarPessoa()' class="cadastro">Cadastrar</button>
 </div>
 
+<div class="voltar">
+    <button class="volta" (click)= 'voltar()'>Voltar Página principal</button>
+</div>
+
 
 
