--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
@@ -12,3 +12,7 @@
     <input [(ngModel)] = 'id' placeholder="Pedido" class="cadastro">
     <button (click) = 'cadastrarPedido()' class="cadastro">Cadastrar</button>
 </div>
+
+<div class="voltar">
+    <button class="volta" (click)= 'voltar()'>Voltar Página principal</button>
+  </div>
