--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
@@ -14,3 +14,7 @@
   <input [(ngModel)] = 'valor' placeholder="Valor" class="cadastro">
   <button (click) = 'cadastrarProduto()' class="cadastro">Cadastrar</button>
 </div>
+
+<div class="voltar">
+  <button class="volta" (click)= 'voltar()'>Voltar Página principal</button>
+</div>
