--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
@@ -22,3 +22,15 @@
     height: 30px;
     border: 1px solid black;
 }
+
+.voltar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.volta{
+    width: 5%;
+    height: 40px;
+}
