--- a/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.css
+++ b/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+}
+
 .cliente{
     display: flex;
     justify-content: center;
@@ -11,26 +18,40 @@
     margin-bottom: 25px;
 }
 
+.mexer-cliente button{
+    padding: 5px;
+    border: none;
+    color: white;
+    background-color: #4B0082;
+}
+
 .cadastrar{
+    width: 100%;
+    height: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
 }
 
-.cadastro{
-    width: 100%;
-    height: 30px;
-    border: 1px solid black;
+.cadastrar input{
+    padding: 10px;
+    outline: none;
+    border: none;
+    background-color: #DCDCDC;
 }
 
 .voltar{
+    width: 100%;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
 }
 
-.volta{
-    width: 5%;
-    height: 40px;
+.voltar button{
+    padding: 10px;
+    border: none;
+    color: white;
+    background-color: #4B0082;
 }
+
