--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
@@ -1,18 +1,21 @@
-<div *ngFor = 'let pedido of listaPedidos'>
+<div *ngFor = 'let pedido of listaPedidos; let i = index'>
     <div class="id">
     Id: {{pedido.id}}
     </div>
     <div class="mexer-id">
         <button>Ver pedido</button>
-        <button>Editar pedido</button>
+        <button (click) = 'editar(pedido, i)'>Editar pedido</button>
     </div>
 </div>
 
 <div class="cadastrar">
     <input [(ngModel)] = 'id' placeholder="Pedido" class="cadastro">
-    <button (click) = 'cadastrarPedido()' class="cadastro">Cadastrar</button>
+</div>
+
+<div class="voltar">  
+    <button (click) = 'cadastrarPedido()'>Cadastrar</button>
 </div>
 
 <div class="voltar">
-    <button class="volta" (click)= 'voltar()'>Voltar Página principal</button>
-  </div>
+    <button (click)= 'voltar()'>Voltar Página principal</button>
+</div>
