--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 15px;
+}
+
 .produtos{
     display: flex;
     justify-content: center;
@@ -8,7 +15,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+}
+
+.mexer-produto button{
+    padding: 5px;
+    border: none;
+    color: white;
+    background-color: #4B0082;
 }
 
 .cadastrar{
@@ -17,10 +31,11 @@
     align-items: center;
 }
 
-.cadastro{
-    width: 100%;
-    height: 30px;
-    border: 1px solid black;
+.cadastrar input{
+    padding: 10px;
+    outline: none;
+    border: none;
+    background-color: #DCDCDC;
 }
 
 .voltar{
@@ -30,7 +45,9 @@
     margin-top: 20px;
 }
 
-.volta{
-    width: 5%;
-    height: 40px;
+.voltar button{
+    padding: 10px;
+    border: none;
+    color: white;
+    background-color: #4B0082;
 }
