--- a/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
+++ b/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
@@ -1,14 +1,15 @@
 <div *ngFor = 'let cliente of listaClientes; let i = index'>
         <div class="cliente">
-        {{cliente.nome}} {{cliente.sobrenome}}
+        {{cliente.id}} {{cliente.nome}} {{cliente.sobrenome}}
         </div>
        <div class="mexer-cliente">
-           <button>Ver Cliente</button>
+           <button (click) = 'abrirProduto(cliente)'>Ver Cliente</button>
            <button (click) = 'editar(cliente, i)'>Editar Cliente</button>
        </div>
     </div>
     
     <div class="cadastrar">
+        <input [(ngModel)]='id' placeholder="Id">
         <input [(ngModel)]='nome' placeholder="Nome">
         <input [(ngModel)]='sobrenome' placeholder="Sobrenome">
     </div>
