--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
@@ -3,7 +3,7 @@
     Id: {{pedido.id}}
     </div>
     <div class="mexer-id">
-        <button>Ver pedido</button>
+        <button (click) = 'abrirProduto(pedido)'>Ver pedido</button>
         <button (click) = 'editar(pedido, i)'>Editar pedido</button>
     </div>
 </div>
