--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.css
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.css
@@ -6,16 +6,21 @@
 }
 
 .id{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.mexer-id{
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     margin-bottom: 25px;
+}
+
+.mexer-id{
+    display: grid;
+    justify-content: center;
+    align-items: center;width: 100%;
+    height: 125px;
+    padding: 10px;
+    outline: none;
+    border: 1px solid;
+    background-color: #fffff0;
 }
 
 .mexer-id button{
