--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
@@ -6,16 +6,22 @@
 }
 
 .produtos{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.mexer-produto{
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     margin-bottom: 25px;
+}
+
+.mexer-produto{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 125px;
+    padding: 10px;
+    outline: none;
+    border: 1px solid;
+    background-color: #fffff0;
 }
 
 .mexer-produto button{
