--- a/src/app/main/main-page/main-page.component.html
+++ b/src/app/main/main-page/main-page.component.html
@@ -16,4 +16,8 @@
   <div class="main-button-voltar">
     <button (click)='voltar()'>Voltar</button>
   </div>
+
+  <div class="main-button-voltar">
+    <button (click) = 'logout()'>Logout</button>
+  </div>
 </div>
