--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
@@ -1,9 +1,10 @@
 <div *ngFor = 'let pedido of listaPedidos; let i = index'>
     <div class="id">
-        <div class="mexer-id">
+        <div *ngIf = 'pedido.deleted != true' class="mexer-id">
             Id: {{pedido.id}} Situação: {{pedido.situacao}}
             <button (click) = 'abrirProduto(pedido)'>Ver pedido</button>
             <button (click) = 'editar(pedido, i)'>Editar pedido</button>
+            <button (click) = 'deletar(i)'>Deletar Pedido</button>
         </div>
     </div> 
 </div>
