--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
@@ -1,9 +1,10 @@
 <div *ngFor = 'let produto of listaProdutos; let i = index' >
   <div class="produtos">
-    <div class="mexer-produto">
+    <div *ngIf = 'produto.deleted != true' class="mexer-produto">
       Id: {{produto.id}} Nome: {{produto.nome}} Valor: R${{produto.valor}}
       <button (click) = 'abrirProduto(produto)'>Ver produto</button>
       <button (click) = 'editar(produto, i)'>Editar produto</button>
+      <button (click) = 'deletar(i)'>Deletar Produto</button>
     </div>
   </div>
 </div>
