--- a/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
+++ b/src/app/cliente/gerenciar-cliente/gerenciar-cliente.component.html
@@ -4,7 +4,7 @@
                 {{cliente.id}} {{cliente.nome}} {{cliente.sobrenome}}
                    <button (click) = 'abrirProduto(cliente)'>Ver Cliente</button>
                    <button (click) = 'editar(cliente, i)'>Editar Cliente</button>
-                   <button (click) = 'deletar(i)'>Deletar Pessoa</button>
+                   <!-- <button (click) = 'deletar(i)'>Deletar Pessoa</button> -->
                </div>
         </div>
     </div>
