--- a/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
+++ b/src/app/pedido/gerenciar-pedido/gerenciar-pedido.component.html
@@ -4,7 +4,7 @@
             Id: {{pedido.id}} Situação: {{pedido.situacao}}
             <button (click) = 'abrirProduto(pedido)'>Ver pedido</button>
             <button (click) = 'editar(pedido, i)'>Editar pedido</button>
-            <button (click) = 'deletar(i)'>Deletar Pedido</button>
+            <!-- <button (click) = 'deletar(i)'>Deletar Pedido</button> -->
         </div>
     </div> 
 </div>
