--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.html
@@ -4,7 +4,7 @@
       Id: {{produto.id}} Nome: {{produto.nome}} Valor: R${{produto.valor}}
       <button (click) = 'abrirProduto(produto)'>Ver produto</button>
       <button (click) = 'editar(produto, i)'>Editar produto</button>
-      <!-- <button (click) = 'deletar(i)'>Deletar Produto</button> -->
+      <button (click) = 'deletar(i)'>Deletar Produto</button>
     </div>
   </div>
 </div>
