--- a/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
+++ b/src/app/produtos/gerenciar-produtos/gerenciar-produtos.component.css
@@ -21,12 +21,14 @@
     padding: 10px;
     outline: none;
     border: 1px solid;
+    border-radius: 15px;
     background-color: #fffff0;
 }
 
 .mexer-produto button{
     padding: 5px;
-    border: none;
+    border: solid;
+    border-radius: 15px;
     color: white;
     background-color: #4B0082;
 }
